--- a/03-frontend/angular-ecommerce/src/app/components/header/header.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/header/header.component.html
@@ -1,6 +1,15 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">TheBook Store</a>
+    <a class="navbar-brand">
+      <img
+        src="/assets/images/books-book-svgrepo-com.svg"
+        alt=""
+        width="20px"
+        height="20px"
+        class="d-inline-block align-text-top"
+      />
+      The Book Store</a
+    >
     <button
       class="navbar-toggler"
       type="button"
@@ -20,7 +29,6 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
-            href="#"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -28,26 +36,43 @@
             Category
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Books</a></li>
-            <li><a class="dropdown-item" href="#">Stationery</a></li>
-            <li><a class="dropdown-item" href="#">Souvernirs</a></li>
+            <li *ngFor="let category of productCategories">
+              <a
+                style="color: var(--dark-purple) !important"
+                class="nav-link"
+                routerLink="/category/{{ category.id }}"
+                routerLinkActive="active-link"
+                >{{ category.categoryName }}</a
+              >
+            </li>
+            <!-- <li>
+              <a
+                routerLink="/category/1"
+                routerLinkActive="active-link"
+                class="nav-link"
+                >Books</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/category/2"
+                routerLinkActive="active-link"
+                class="nav-link"
+                >Stationery</a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/category/3"
+                routerLinkActive="active-link"
+                class="nav-link"
+                >Souvernirs</a
+              >
+            </li> -->
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2 search-bar"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button
-          class="btn btn-outline-secondary search-btn d-flex"
-          type="submit"
-        >
-          <mat-icon>search</mat-icon>
-        </button>
-      </form>
+      <app-search></app-search>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="#">Log in</a>
