--- a/03-frontend/angular-ecommerce/src/app/components/footer/footer.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/footer/footer.component.html
@@ -1,1 +1,77 @@
-<p>footer works!</p>
+<!-- Site footer -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">
+          Welcome to The Book Nook, your cozy corner for discovering a world of
+          stories! Whether you're searching for the latest bestsellers, timeless
+          classics, or hidden gems, our carefully curated collection has
+          something for every reader. At The Book Nook, we believe in the magic
+          of books to inspire, entertain, and educate. Drop by to explore,
+          unwind, and lose yourself in the pages of your next great read!
+        </p>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Categories</h6>
+        <ul class="footer-links">
+          <li *ngFor="let category of productCategories">
+            <a
+              class="nav-link"
+              routerLink="/category/{{ category.id }}"
+              routerLinkActive="active-link"
+              >{{ category.categoryName }}</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="http://scanfcode.com/about/">About Us</a></li>
+          <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+          <li>
+            <a href="http://scanfcode.com/contribute-at-scanfcode/"
+              >Contribute</a
+            >
+          </li>
+          <li>
+            <a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a>
+          </li>
+          <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr />
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">
+          Copyright &copy; 2017 All Rights Reserved by
+          <a href="#">The Nook Book</a>.
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li>
+            <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+          </li>
+          <li>
+            <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
