--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product/product.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product/product.component.html
@@ -1,32 +1,35 @@
-<mat-card class="product-card" appearance="outlined">
-  <img
-    mat-card-image
-    src="assets/images/images.png"
-    alt="Photo of the product"
-  />
-  <mat-card-content style="text-align: center">
-    <span
-      title="{{ name }}"
-      class="d-inline-block text-truncate"
-      style="max-width: 200px; font-weight: 600"
-    >
-      {{ name }}
-    </span>
-    <br />
-    <span
-      title="{{ description }}"
-      class="d-inline-block text-truncate"
-      style="max-width: 200px"
-    >
-      {{ description }}
-    </span>
-    <h6>{{ price }}</h6>
-  </mat-card-content>
-  <mat-card-actions style="justify-content: space-around">
-    <button mat-flat-button class="cart-button">
-      <mat-icon>add_shopping_cart</mat-icon>
-      Add to cart
-    </button>
-    <button mat-stroked-button class="details-button">View details</button>
-  </mat-card-actions>
-</mat-card>
+<a routerLink="{{ linkToDetail }}">
+  <mat-card class="product-card" appearance="outlined">
+    <img
+      mat-card-image
+      src="assets/images/images.png"
+      alt="Photo of the product"
+    />
+
+    <mat-card-content style="text-align: center">
+      <span
+        title="{{ name }}"
+        class="d-inline-block text-truncate"
+        style="max-width: 200px; font-weight: 600"
+      >
+        {{ name }}
+      </span>
+      <br />
+      <span
+        title="{{ description }}"
+        class="d-inline-block text-truncate"
+        style="max-width: 200px"
+      >
+        {{ description }}
+      </span>
+      <h6>{{ price }}</h6>
+    </mat-card-content>
+    <mat-card-actions style="justify-content: space-around">
+      <button mat-flat-button class="cart-button">
+        <mat-icon>add_shopping_cart</mat-icon>
+        Add to cart
+      </button>
+      <button mat-stroked-button class="details-button">View details</button>
+    </mat-card-actions>
+  </mat-card>
+</a>
